WIP. Widgets. Changing locale is now done by a dedicated widget.

--- a/src/public/scss/main.scss
+++ b/src/public/scss/main.scss
@@ -4,6 +4,7 @@
 @import 'common/scroll';
 @import 'common/size';
 @import 'common/variables';
+@import 'widgets/locale';
 
 body {
   overflow-x: hidden;
