--- a/src/views/index.html
+++ b/src/views/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 {%- import "common/webpack.njk" as webpack -%}
-{%- import "common/locale.njk" as commonLocale -%}
 <html lang="{{ lang }}" dir="{{ lang_dir }}" bop-context="{{ context | dump }}">
   <head>
     <meta charset="utf-8">
@@ -20,7 +19,7 @@
       {% endif %}
       {% if changeLocaleInformations %}
         <div>
-          {{ commonLocale.localeButtons(changeLocaleInformations) }}
+          {% include "common/locale.njk" %}
         </div>
       {% endif %}
       <div>
