--- a/src/views/index.html
+++ b/src/views/index.html
@@ -29,6 +29,6 @@
     <div>
       Here we go!
     </div>
-    {{ webpack.bodyScripts(webpackManifest, 'main') }}
+    {{ webpack.bodyScripts(locale, webpackManifest, 'main') }}
   </body>
 </html>
