--- a/src/views/login.html
+++ b/src/views/login.html
@@ -37,6 +37,6 @@
         </footer>
       </div>
     </div>
-    {{ webpack.bodyScripts(webpackManifest, 'login') }}
+    {{ webpack.bodyScripts(locale, webpackManifest, 'login') }}
   </body>
 </html>
