--- a/src/public/scss/common/common.scss
+++ b/src/public/scss/common/common.scss
@@ -6,8 +6,9 @@
 
 html {
   background-color: $background-color-empty;
-  color: $base-color;
+  color: $color-base;
   font-family: Arial, Helvetica, sans-serif;
+  font-size: 62.5%;
   height: 100%;
   text-rendering: optimizeLegibility;
 }
