--- a/src/public/scss/common/variables.scss
+++ b/src/public/scss/common/variables.scss
@@ -1,8 +1,10 @@
-$base-color: #000;
-$error-color: red;
+$color-base: #000;
+$color-error: red;
+$color-filled: #fff;
 
 $border-color-dark: #000;
 $border-color-light: rgba(0,0,0,.06);
 
 $background-color-empty: #fff;
 $background-color-light: #f2f2f2;
+$background-color-filled: #4268d5;
