--- a/src/views/index.html
+++ b/src/views/index.html
@@ -9,23 +9,41 @@
   </head>
   <body>
     <header>
-      <h1>BOP</h1>
-      {% if not isProduction %}
-        <label>
-          <input type="checkbox" checked="checked" auto-reload-dev-mode>
-          Auto reload
-        </label>
-        <br>
-      {% endif %}
-      {% if changeLocaleInformations %}
-        <div>
-          {% include "common/locale.njk" %}
-        </div>
-      {% endif %}
-      <div>
-        <a href="/logout">{{ gettext('Logout') }}</a>
+      <div class="header-first-block">
+        <h1>BOP</h1>
+      </div>
+      <div class="header-last-block">
+        <a main-sidebar-open>&#x2630;</a>
       </div>
     </header>
+    <div class="hidden" widget-sidebar widget-sidebar-open="[main-sidebar-open]" widget-sidebar-close="[main-sidebar-close],[sidebar-close]">
+      <div class="sidebar-wrapper">
+        <div class="sidebar-header">
+          <h1>BOP</h1>
+          <div sidebar-close>&rarr;</div>
+        </div>
+        <div class="sidebar-content">
+          <ul>
+            {% if not isProduction %}
+            <li>
+              <label>
+                <input type="checkbox" checked="checked" auto-reload-dev-mode>
+                Auto reload
+              </label>
+            </li>
+            {% endif %}
+            {% if changeLocaleInformations %}
+            <li main-sidebar-close>
+              {% include "common/locale.njk" %}
+            </li>
+            {% endif %}
+            <li>
+              <a href="/logout">{{ gettext('Logout') }}</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </div>
     <div>
       Here we go!
     </div>
