--- a/src/public/scss/common/variables.scss
+++ b/src/public/scss/common/variables.scss
@@ -4,7 +4,10 @@ $color-filled: #fff;
 
 $border-color-dark: #000;
 $border-color-light: rgba(0,0,0,.06);
+$border-color-filled-light: rgba(255,255,255,.15);
 
 $background-color-empty: #fff;
 $background-color-light: #f2f2f2;
+$background-color-light-hover: #f6f6f6;
 $background-color-filled: #4268d5;
+$background-color-filled-light: rgba(255,255,255,.15);
