Using template inheritence for the index.

--- a/src/views/common/page.njk
+++ b/src/views/common/page.njk
@@ -45,7 +45,7 @@
       </div>
     </div>
     <div>
-      Here we go!
+      {% block content %}{% endblock %}
     </div>
     {{ webpack.bodyScripts(locale, webpackManifest, 'main') }}
   </body>
