WIP on top nav_menu.

--- a/src/public/scss/main.scss
+++ b/src/public/scss/main.scss
@@ -1,6 +1,7 @@
 @import 'common/common';
 @import 'common/error';
 @import 'common/flex';
+@import 'common/icon';
 @import 'common/scroll';
 @import 'common/size';
 @import 'common/variables';
