Using resolve-url-loader to use current file relative paths.

--- a/src/public/scss/common/icon.scss
+++ b/src/public/scss/common/icon.scss
@@ -8,5 +8,5 @@
 
 %icon-home, .icon-home {
   @extend %icon;
-  background-image: url('../images/home.svg');
+  background-image: url('../../images/home.svg');
 }
