--- a/src/views/common/page.njk
+++ b/src/views/common/page.njk
@@ -12,14 +12,14 @@
       <div class="header-first-block">
         <h1>BOP</h1>
         <nav>
-          <ul>
-            <li><a href="/index" {% if currentPage === 'index' %}class="selected"{% endif %}>
-              <span class="icon-home"></span>
-            </a></li>
-            <li><a href="/index">
-              <span class="icon-home"></span>
-            </a></li>
-          </ul>
+          <a href="/index" {% if currentPage === 'index' %}class="selected"{% endif %}>
+            <span class="icon-home"></span>
+            <span>{{ gettext('Home') }}</span>
+          </a>
+          <a href="/index">
+            <span class="icon-home"></span>
+            <span>{{ gettext('Home') }}</span>
+          </a>
         </nav>
       </div>
       <div class="header-last-block">
