--- a/src/public/scss/common/variables.scss
+++ b/src/public/scss/common/variables.scss
@@ -11,3 +11,5 @@ $background-color-light: #f2f2f2;
 $background-color-light-hover: #f6f6f6;
 $background-color-filled: #4268d5;
 $background-color-filled-light: rgba(255,255,255,.15);
+
+$hover-transition-time: 150ms;
