WIP on planning view.

--- a/src/public/scss/common/scroll.scss
+++ b/src/public/scss/common/scroll.scss
@@ -1,11 +1,11 @@
-.scroll {
+%scroll, .scroll {
   overflow: auto;
 }
 
-.v-scroll {
+%v-scroll, .v-scroll {
   overflow-y: auto;
 }
 
-.h-scroll {
+%h-scroll, .h-scroll {
   overflow-x: auto;
 }
