--- a/src/public/scss/main.scss
+++ b/src/public/scss/main.scss
@@ -8,6 +8,8 @@
 @import 'widgets/locale';
 @import 'widgets/sidebar';
 
+@import 'planning/planning';
+
 body {
   overflow-x: hidden;
   overflow-y: hidden;
