--- a/src/views/common/page.njk
+++ b/src/views/common/page.njk
@@ -54,7 +54,7 @@
         </div>
       </div>
     </div>
-    <div>
+    <div class="h-full w-full">
       {% block content %}{% endblock %}
     </div>
     {{ webpack.bodyScripts(locale, webpackManifest, 'main') }}
