Fixing scss misunderstanding. Complete refactoring.

--- a/src/public/scss/abstracts/mixins/_button.scss
+++ b/src/public/scss/abstracts/mixins/_button.scss
@@ -1,8 +1,8 @@
-%link-clickable {
+@mixin link-clickable {
   cursor: pointer;
   text-decoration: underline;
 }
 
-%button-picto {
+@mixin button-picto {
   cursor: pointer;
 }
