--- a/src/public/scss/common/_common.scss
+++ b/src/public/scss/common/_common.scss
@@ -1,5 +1,3 @@
-@import 'common/variables';
-
 * {
   box-sizing: border-box;
 }
@@ -27,4 +25,37 @@ ul {
 
 .hidden {
   display: none;
+}
+
+.error {
+  @include error();
+}
+
+// FIXME: remove flex* classes.
+.flex {
+  @include flex();
+}
+
+.flex-inline {
+  @include flex-inline();
+}
+
+.flex-v {
+  @include flex-v();
+}
+
+.flex-full-fix {
+  @include flex-full-fix();
+}
+
+.flex-fix {
+  @include flex-fix();
+}
+
+// FIXME: remove *-full
+.w-full {
+  width: 100%;
+}
+.h-full {
+  height: 100%;
 }
