--- a/src/public/scss/abstracts/mixins/_flex.scss
+++ b/src/public/scss/abstracts/mixins/_flex.scss
@@ -15,6 +15,13 @@
   height: 100%;
 }
 
+// @mixin flex-v-center {
+//   align-items: center;
+//   display: flex;
+//   flex-direction: column;
+//   height: 100%;
+// }
+
 @mixin flex-full-fix {
   flex-grow: 1;
   flex-shrink: 0;
