--- a/src/public/scss/main.scss
+++ b/src/public/scss/main.scss
@@ -4,8 +4,6 @@
 @import 'common';
 @import 'widgets';
 
-@import 'planning';
-
 body {
   overflow-x: hidden;
   overflow-y: hidden;
@@ -89,5 +87,6 @@ header {
 
 .page-content {
   height: 100%;
+  position: relative;
   width: 100%;
 }
