WIP on planning widget styles.

--- a/src/public/scss/abstracts/_variables.scss
+++ b/src/public/scss/abstracts/_variables.scss
@@ -13,3 +13,5 @@ $background-color-filled: #4268d5;
 $background-color-filled-light: rgba(255,255,255,.15);
 
 $hover-transition-time: 150ms;
+
+$background-stripes-width: 5px;
